[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BMCTool"
version = "0.7.0"
description = "A python tool to perform Bloch-McConnell (BMC) simulations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["MRI, Bloch, Bloch-McConnell, CEST, simulation"]
authors = [{ name = "Patrick Schuenke", email = "patrick.schuenke@ptb.de" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "numpy>=1.23,<2.0",
    "matplotlib",
    "tqdm",
    "PyYAML",
    "pypulseq@git+https://github.com/imr-framework/pypulseq",
]

[project.optional-dependencies]
test = [
    "coverage",
    "codecov",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
lint = ["mypy", "flake8", "isort", "pre-commit", "autopep8", "pydocstyle"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-pyproject"]

[project.urls]
"repository" = "https://github.com/schuenke/BMCTool"

# PyTest section
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

# MyPy section
[tool.mypy]
warn_return_any = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true
exclude = ["docs"]

[[tool.mypy.overrides]]
module = ["ismrmrd.*", "h5py", "scipy.*"]
ignore_missing_imports = true

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
skip = ["__init__.py"]
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_single_line = true


[tool.pydocstyle]
convention = "numpy"
add_ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
]
# select = ["D200", "D201", "D205", "D206", "D207", "D208", "D214", "D215", "D409"]

[tool.codespell]
builtin = "en-GB_to_en-US"
ignore-words-list = "te,TE"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
